# arabic-qwen-base-finetuning

./: .env.example  .gitignore  ATTRIBUTION.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  TRAINING_GUIDE.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.py  setup.py
config/: __init__.py  base_config.py  cpo_config.py  dpo_config.py  env_config.py  ipo_config.py  kto_config.py  orpo_config.py  repository_structure.yaml  sft_config.py  simpo_config.py
configs/: qwen3_config.yaml
data/: dataset_info.json
data/dpo/: arabic_dpo_samples.json
data/evaluation/: arabic_eval_samples.json
data/kto/: arabic_kto_samples.json
data/sft/: arabic_sft_samples.json
docs/: DEPLOYMENT.md  README.md  USAGE.md  arabic-dialect-guide.md  benchmarking-and-optimization.md  dataset-preparation.md  fine-tuning-guide.md  hardware-requirements.md  implementation-examples.md  model-merging-guide.md  model-selection.md  testing.md  troubleshooting.md
docs/api/: index.md
docs/api/config/: base_config.md  cpo_config.md  dpo_config.md  env_config.md  index.md  ipo_config.md  kto_config.md  sft_config.md
docs/api/data/: arabic_dialect_utils.md  base_loader.md  cpo_loader.md  dpo_loader.md  index.md  ipo_loader.md  kto_loader.md  preference_loader.md  processors.md  sft_loader.md
docs/api/evaluation/: arabic_evaluator.md  base_evaluator.md  index.md  preference_evaluator.md  sft_evaluator.md
docs/api/training/: base_trainer.md  dpo_trainer.md  index.md  model_merger.md  preference_trainer.md  sft_trainer.md  simpo_trainer.md
examples/: model_usage_examples.py
huggingface/cpo/: README.md
huggingface/dpo/: README.md
huggingface/ipo/: README.md
huggingface/kto/: README.md
huggingface/sft/: README.md
huggingface_builder/: .gitignore  README.md  requirements.txt  upload_models.bat  upload_models.ps1  upload_models.py  validate_setup.py
models/qwen-3-base-arabic-arabic-chat-CPO/: config.json  training_args.json
models/qwen-3-base-arabic-arabic-chat-DPO/: config.json  training_args.json
models/qwen-3-base-arabic-arabic-chat-IPO/: config.json  training_args.json
models/qwen-3-base-arabic-arabic-chat-KTO/: config.json  training_args.json
models/qwen-3-base-arabic-arabic-chat-SFT/: config.json  training_args.json
models/qwen-3-base-arabic-arabic-instruct-CPO/: config.json  tokenizer_config.json  training_args.json
models/qwen-3-base-arabic-arabic-instruct-DPO/: config.json  training_args.json
models/qwen-3-base-arabic-arabic-instruct-IPO/: config.json  training_args.json
models/qwen-3-base-arabic-arabic-instruct-KTO/: config.json  training_args.json
models/qwen-3-base-arabic-arabic-instruct-SFT/: config.json  training_args.json
models/qwen-3-base-arabic-arabic-qa-CPO/: config.json  training_args.json
models/qwen-3-base-arabic-arabic-qa-DPO/: config.json  training_args.json
models/qwen-3-base-arabic-arabic-qa-IPO/: config.json  training_args.json
models/qwen-3-base-arabic-arabic-qa-KTO/: config.json  training_args.json
models/qwen-3-base-arabic-arabic-qa-SFT/: config.json  training_args.json
outputs/: benchmark_results.json  comprehensive_training_report.md  model_paths.json  training_results.json  training_summary.json
reports/: comprehensive_training_report.md
scripts/: arabic_dialect_test_results.json  benchmark_methods.py  create_sample_datasets.py  inference.py  merge_models.py  mock_training.py  prepare_datasets.py  real_training.py  simple_training.py  test_arabic_dialects.py  test_merge_logic.py  test_setup.py  train_all_methods.py  upload_to_huggingface.py
src/: __init__.py
src/data_loader/: __init__.py  base_loader.py  dpo_loader.py  preference_loader.py  sft_loader.py
src/evaluation/: __init__.py  arabic_evaluator.py  base_evaluator.py  preference_evaluator.py  sft_evaluator.py
src/training/: __init__.py  base_trainer.py  dpo_trainer.py  orpo_trainer.py  preference_trainer.py  sft_trainer.py  simpo_trainer.py
src/utils/: __init__.py  arabic_dialect_utils.py  common.py  data_utils.py  model_utils.py
test_outputs/arithmetic_merge/: merge_info.json
test_outputs/sequential_merge/: merge_info.json
test_outputs/slerp_merge/: merge_info.json
test_outputs/weighted_merge/: merge_info.json
tests/: __init__.py  test_config.py  test_data_loader.py  test_evaluation.py  test_training.py  test_utils.py
